feat：移除无效代码，多维度权限扩展